--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 }
 body {
   background: var(--bg-ulr) no-repeat top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "inter", sans-serif;
@@ -136,4 +137,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assents/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assents/bg-desktop-lightjpg);
+  }
 }
