Alterações do butão

--- a/style.css
+++ b/style.css
@@ -69,11 +69,14 @@ body * {
   z-index: 1;
   right: 0;
   top: 50%;
+  animation: slide-back 0.5s;
   transform: translateY(-50%);
 }
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
+}
 .light #switch button {
-  left: 0;
-  right: initial;
+  animation: slide-in 0.5s forwards;
 }
 #switch span {
   display: block;
@@ -147,4 +150,24 @@ footer {
   .light {
     --bg-url: url(./assents/bg-desktop-lightjpg);
   }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    right: 0;
+  }
+  to {
+    right: 50%;
+  }
+}
+@keyframes slide-back{
+ from {
+    right: 50%;
+  }
+  to {
+    right: 0;
+  }
+}
+
 }
